<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line_card_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/dp22" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line_card_2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/dp22" />

    <View
        android:id="@+id/view_header"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/daskish_blur"
        app:layout_constraintDimensionRatio="w,1:2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line_card_1" />

    <TextView
        android:id="@+id/tv_card_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/cuentas_bancarias_y_tarjetas"
        android:textColor="@color/white_three"
        android:textSize="@dimen/sp20"
        app:layout_constraintEnd_toStartOf="@+id/line_card_2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/line_card_1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_card_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_regular"
        android:maxLines="2"
        android:text="@string/mantenemos"
        android:textColor="@color/white_three"
        android:textSize="@dimen/sp12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@id/line_card_2"
        app:layout_constraintStart_toStartOf="@+id/line_card_1"
        app:layout_constraintTop_toBottomOf="@+id/tv_card_1" />

    <ImageView
        android:id="@+id/iv_card"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="2:1.05"
        android:scaleType="fitXY"
        android:src="@drawable/ic_group"
        app:layout_constraintBottom_toBottomOf="@+id/view_header"
        app:layout_constraintEnd_toStartOf="@+id/line_card_2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/line_card_1"
        app:layout_constraintTop_toBottomOf="@+id/view_header" />

    <TextView
        android:id="@+id/tv_card_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp36"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/mis_tarjetas"
        android:textColor="@color/color11"
        android:textSize="@dimen/sp16"
        app:layout_constraintEnd_toStartOf="@+id/line_card_2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/line_card_1"
        app:layout_constraintTop_toBottomOf="@+id/iv_card" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/line_card_3"
        app:layout_constraintEnd_toStartOf="@+id/line_card_2"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/line_card_1"
        app:layout_constraintTop_toBottomOf="@+id/tv_card_3">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_cards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line_card_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/dp36" />


</androidx.constraintlayout.widget.ConstraintLayout>